--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 .fuse_hidden*
 
 # KDE directory preferences
-.directory
+.directoryimport { PORT } from './config.js'
 
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
@@ -218,3 +218,4 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/windows,node,linux,macos
 
 mysql_data
+docker-compose.yml
